--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# Node.js
-node_modules
+# Dependencies
+/node_modules
 /dist
 /build
-.env
+
+# Temp
+/temp
 
 # Logs
 logs
@@ -10,8 +12,32 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+
+# Vite
+.vite/
+.next/
+.nuxt/
+.svelte-kit/
+.vercel/
+.output
+
+# IDEs and editors
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # OS
 .DS_Store
-.vscode
-.idea
+Thumbs.db
+
+# Misc
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
